--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>To Do List</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
@@ -14,6 +14,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&amp;display=swap" rel="stylesheet">
+  <!-- Add Bootstrap CSS in index.html -->
+<!-- Add Bootstrap JS in index.html (for modal functionality) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+
 
 
 
@@ -28,6 +32,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-QF4Gt4oO/9fsTynv4kHoUyKyz9fAA1jSL/AF8UbiT1ZjAPfT2Vv7ZJY92wXGI6cS" crossorigin="anonymous"></script>
 
   <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-qHBM96BHH0XtcIj5dmb4QjR+EoF9I6E/1aIwFkR5dPEd7wRRGhdb9Q/WeFla/s9g" crossorigin="anonymous"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
